--- a/Solver-QTSP/Solver-QTSP.vcxproj.filters
+++ b/Solver-QTSP/Solver-QTSP.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="GA.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ILS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ga.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ILS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
